--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,18 +1,21 @@
-<h1>Listing carts</h1>
+<% if notice %>
+	<p id="notice"><%= notice %></p>
+<% end %>
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h1>Warenkörbe</h1>
 
+<table style="border: 1px solid black">
+	<tr>
+		<th>id</th>
+		<th colspan="3"></th>
+	</tr>
 <% @carts.each do |cart| %>
-  <tr>
-    <td><%= link_to 'Show', cart %></td>
-    <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
-    <td><%= link_to 'Destroy', cart, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
+	<tr>
+		<td><%= cart.id %></td>
+		<td><%= link_to 'Show', cart %></td>
+		<td><%= link_to 'Edit', edit_cart_path(cart) %></td>
+		<td><%= link_to 'Destroy', cart, confirm: 'Are you sure?', method: :delete %></td>
+	</tr>		
 <% end %>
 </table>
 
