--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,8 +13,7 @@
  *= require_self
  *= require_tree .
  */
- 
-/* START_HIGHLIGHT */
+
 #banner {
   background: #9c9;
   padding: 10px;
@@ -41,21 +40,46 @@
   background: #141;
 
   #main {
-    margin-left: 17em;
+    margin-left: 29em;
     padding: 1em;
     background: white;
   }
 
+//#START:side
   #side {
     float: left;
+    display: block;
     padding: 1em 2em;
-    width: 13em;
+    width: 25em;
     background: #141;
 
+/* START_HIGHLIGHT */
+    form, div {
+      display: inline;
+    }  
+ 
+    input {
+      font-size: small;
+    }
+
+    #cart {
+      font-size: smaller;
+      color:     white;
+
+      table {
+        border-top:    1px dotted #595;
+        border-bottom: 1px dotted #595;
+        margin-bottom: 10px;
+      }
+    }
+
+/* END_HIGHLIGHT */
     ul {
       padding: 0;
+
       li {
         list-style: none;
+
         a {
           color: #bfb;
           font-size: small;
@@ -63,5 +87,5 @@
       }
     }
   }
+//#END:side
 }
-/* END_HIGHLIGHT */
