--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,78 +1,5 @@
-
-<style>
-	table {
-		border: 2px solid #000000;
-		width: 100%;
-	}
-	th {
-		border-bottom: 1px solid #000000;
-		background-color: #EAEAEA;
-		color: #555555;
-	}
-	th.id {
-		width: 5%;
-	}
-	th.desc{
-		width: 60%;
-	}
-	th.qty{
-		width: 10%;
-	}
-	th.price{
-		width: 10%;
-	}
-	th.total{
-		width: 15%;
-	}
-	table td.desc h2 {
-		font-size: 12px;
-		font-weight: bold;
-	}
-	table td.desc p{
-		font-size: 10px;
-	}
-	table tr.total{
-		font-weight: bold;
-	}
-	table tr.cart_line_odd{
-		background-color: #FFFFFF;
-	}
-	table tr.cart_line_even{
-		background-color: #F9F9F9;
-	}
-	
-</style>
 <% if notice %>
 	<p id="notice"><%= notice %></p>
 <% end %>
 
-<h2>Warenkorb</h2>
-<table>
-	<tr>
-		<th class="id">id</th>
-		<th class="desc">Bezeichnung</th>
-		<th class="qty">Anzahl</th>
-		<th class="price">Einzelpreis</th>
-		<th class="total">Total</th>
-	</tr>
-	<% @cart.line_items.each do |item| %>
-	<tr class="<%= cycle('cart_line_odd', 'cart_line_even') %>" >
-		<td><%= item.product.id %></td>
-		<td class="desc">
-			<h2><%= item.product.title %></h2>
-			<p><%= truncate(strip_tags(item.product.description), length: 100) %></p>
-		</td>
-		<td><%= item.quantity %></td>
-		<td><%= number_to_currency(item.product.price, :unit => 'CHF ') %></td>
-		<td><%= number_to_currency(item.total_price, :unit => 'CHF ')%></td>
-	</tr>
-	<% end %>
-	<tr class="total">
-		<td colspan="4" style="text-align: right">Total</td>
-		<td><%= number_to_currency(@cart.total_price, :unit => 'CHF ') %></td>
-	</tr>
-</table>
-	
-<%= button_to 'Korb leeren', @cart, method: :delete, confirm: 'Sind Sie sicher?'%>
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<%= render @cart %>
