--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -63,6 +63,7 @@
 	</tr>
 </table>
 	
+<%= button_to "Checkout", new_order_path, method: :get %>
 <%= button_to 'Korb leeren', @cart, method: :delete, confirm: 'Sind Sie sicher?'%>
 <%= link_to 'Edit', edit_cart_path(@cart) %> |
 <%= link_to 'Back', carts_path %>
